--- a/TheBlogProject/TheBlogProject.csproj
+++ b/TheBlogProject/TheBlogProject.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
     <Folder Include="wwwroot\lib\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
